--- a/code/R4.html
+++ b/code/R4.html
@@ -12,6 +12,10 @@
     <table id="clima" class="clima">
         <tr><td>Cargando...</td></tr>
     </table>
+
+    <main id="articulos">
+        <article>Cargando...</article>
+    </main>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="R4.js"></script>
 </body>
